[package]
name = "bench"
version = "0.1.0"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3"
clap = "2"
actix-rt = "1.1.1"
num_cpus = "1.13.0"
tokio = { version = "0.3", features = ["sync"]}
lazy_static = "1.4"
