[package]
name = "tb"
version = "0.1.0"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = "2.0.3"
actix-rt = "1.1.1"
actix = "0.10"
futures = "*"
tokio = { version = "0.3", features = ["sync"]}
